--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "JamahCortPlus",
-    "slug": "JamahCortPlus",
+    "name": "JamahCORPUS",
+    "slug": "JamahCORPUS",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
