Function cloud commit

--- a/firebase.json
+++ b/firebase.json
@@ -4,5 +4,15 @@
       "npm --prefix \"$RESOURCE_DIR\" run lint"
     ],
     "source": "functions"
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "emulators": {
+    "firestore": {
+      "host": "localhost",
+      "port": "1000"
+    }
   }
 }
