--- a/functions/package.json
+++ b/functions/package.json
@@ -4,24 +4,27 @@
   "scripts": {
     "lint": "eslint .",
     "build": "tsc",
-    "serve": "firebase emulators:start --only functions",
+    "serve": "firebase emulators:start --only functions,firestore",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "10"
+    "node": "12"
   },
   "main": "index.js",
   "dependencies": {
+    "firebase": "^8.4.1",
     "firebase-admin": "^9.6.0",
-    "firebase-functions": "^3.13.2"
+    "firebase-functions": "^3.13.2",
+    "firestore": "^1.1.6"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^0.2.0"
+    "firebase-functions-test": "^0.2.0",
+    "typescript": "^4.2.4"
   },
   "private": true
 }
