--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,8 @@
     "firebase": "^8.4.1",
     "firebase-admin": "^9.6.0",
     "firebase-functions": "^3.13.2",
-    "firestore": "^1.1.6"
+    "firestore": "^1.1.6",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
