--- a/firebase.json
+++ b/firebase.json
@@ -12,7 +12,16 @@
   "emulators": {
     "firestore": {
       "host": "localhost",
-      "port": "2000"
+      "port": "1090"
+    },
+    "functions": {
+      "port": 5001
+    },
+    "pubsub": {
+      "port": 8085
+    },
+    "ui": {
+      "enabled": true
     }
   }
 }
