--- a/functions/package.json
+++ b/functions/package.json
@@ -2,9 +2,9 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint",
     "build": "tsc",
-    "serve": "firebase emulators:start --only functions,firestore",
+    "serve": "firebase emulators:start --only functions,firestore,pubsub",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -15,10 +15,12 @@
   },
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "firebase": "^8.4.1",
     "firebase-admin": "^9.6.0",
     "firebase-functions": "^3.13.2",
     "firestore": "^1.1.6",
+    "moment": "^2.29.1",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
