--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@google-cloud/vision": "^2.3.2",
     "cors": "^2.8.5",
     "firebase": "^8.4.1",
     "firebase-admin": "^9.6.0",
