--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.3",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-firebase/app": "^11.2.0",
     "@react-native-firebase/functions": "^11.2.0",
     "@react-native-picker/picker": "^1.9.12",
     "@react-navigation/drawer": "^5.12.4",
