--- a/functions/package.json
+++ b/functions/package.json
@@ -16,11 +16,13 @@
   "main": "index.js",
   "dependencies": {
     "@google-cloud/vision": "^2.3.2",
+    "bic-from-iban": "^1.0.0",
     "cors": "^2.8.5",
     "firebase": "^8.4.1",
     "firebase-admin": "^9.6.0",
     "firebase-functions": "^3.13.2",
     "firestore": "^1.1.6",
+    "ibantools": "^3.3.0",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1"
   },
