--- a/package.json
+++ b/package.json
@@ -12,24 +12,33 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-firebase/app": "^11.2.0",
     "@react-native-firebase/functions": "^11.2.0",
-    "@react-native-picker/picker": "^1.9.12",
+    "@react-native-picker/picker": "1.9.2",
+    "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/compat": "^5.3.15",
     "@react-navigation/drawer": "^5.12.4",
+    "@react-navigation/stack": "^5.14.5",
+    "@use-expo/font": "^2.0.0",
     "expo": "~40.0.0",
     "expo-app-auth": "~9.3.0",
+    "expo-app-loading": "^1.0.3",
+    "expo-asset": "^8.2.2",
     "expo-constants": "~9.3.3",
     "expo-google-sign-in": "~8.4.0",
     "expo-image-picker": "~9.2.0",
     "expo-notifications": "~0.8.2",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
+    "galio-framework": "^0.8.0",
     "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-dotenv": "^2.5.3",
+    "react-native-drop-zone": "^1.0.24",
     "react-native-dropdown-picker": "^4.0.2",
     "react-native-elements": "^3.3.0",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-modal-dropdown": "^1.0.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
